1/4 hw sets finished; full of typos etc

--- a/Crypto/Foundations/index.html
+++ b/Crypto/Foundations/index.html
@@ -11,7 +11,7 @@
       span.underline{text-decoration: underline;}
       div.column{display: inline-block; vertical-align: top; width: 50%;}
   </style>
-  <link rel="stylesheet" href="./blog.css">
+  <link rel="stylesheet" href="../crypto.css">
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
   <![endif]-->
@@ -27,29 +27,15 @@
   </ul>
 </head>
 <body>
-
 <div class="container">
-<h1 id="course">Course</h1>
+<h1 id="lecture-notes-in-cryptography">Lecture Notes in Cryptography</h1>
+<p><strong>Disclaimer:</strong> I have no formal education in cryptography or complexity theory, but in my old age I have decided to pursue research in related areas. This page and its children pages are my notes from studying different concepts in modern cryptography. They are designed to be consumed by me only and are likely full of typos.</p>
+<h2 id="table-of-contents">Table of Contents</h2>
 <ul>
-<li><a href="./TCS_Toolkit-Ryan_ODonell/">Theoretical Computer Science Toolkit</a> - Taught By Ryan O Donnell <strong>IN PROGRESS</strong></li>
-<li>Introduction to Real Analaysis - Taught by Simon Marshall <strong>Need to transfer coursework from paper to digital</strong></li>
-<li>Boolean function analysis - Taught by Ryan O Donnell <strong>Not yet started</strong></li>
+<li><a href="./Prelims/">Background</a></li>
+<li><a href="./OneWayFunctions/">One way functions</a></li>
+<li><a href="./PseudoRandomStuff/">Pseduo Random generators</a></li>
 </ul>
-<!-- * PCP by Tom Gur : TODO
-* Fat tailed distributions : Todo
-* Graduate Real Analysis : TODO
-* Abstract Algebra: TOD
-* Graduate Abstract Algebra : TODO
-* Additive Combinatorics : TODO
- -->
-<!-- * Abstract Algebra
-* Interactive decision making
-* Stochastic processes and graph theory
-* Martingales David Williams Book
-* Game Theory
-* Cryptography
-* High dimensional Probability
-* Computational Complexity -->
 </div>
 <div id="footer">
   “Study hard what interests you the most in the most undisciplined, irreverent and original manner possible.”― Richard Feynmann
