--- a/Crypto/index.html
+++ b/Crypto/index.html
@@ -31,7 +31,11 @@
 <div class="container">
 <h2 id="general">General</h2>
 <ul>
+<li><a href="./Foundations/">Foundations</a></li>
 <li><a href="">MPC notes</a>: Need to transfer from notebook to digital.</li>
+<li><a href="https://eprint.iacr.org/2016/046.pdf">How To Simulate It – A Tutorial on the Simulation Proof Technique</a>: Information theoretic security, semantic security, simulator security. What is this mallarky?</li>
+<li><a href="">Distributed Point Functions</a>:</li>
+<li><a href="">Function secret sharing and homomorphic secret sharing</a>:</li>
 </ul>
 <h2 id="proof-systems">Proof Systems</h2>
 <ul>
