--- a/GraduateSchoolCourses/TCS_Toolkit-Ryan_ODonell/index.html
+++ b/GraduateSchoolCourses/TCS_Toolkit-Ryan_ODonell/index.html
@@ -29,7 +29,8 @@
 <body>
 
 <div class="container">
-<p><strong>Disclaimer:</strong> I did not actually attend CMU. I found his lectures on youtube and homework sets on his website. I attempted to complete them on my own, so there may be bugs.</p>
+<p><strong>Disclaimer:</strong> I did not actually attend CMU. I found his lectures on youtube and homework sets on his website. I attempt to complete them on my own, so there may be bugs. The course notes and homework sets are likely not from the same year either. That is the price of a free education. Syllabus is screenshot below.</p>
+<p><img src="./pngs/syllabus.png" width="95%"></img></p>
 <h1 id="table-of-contents">Table of Contents</h1>
 <ol type="1">
 <li><a href="./AsymptoticsAndGaussians/">Asymptotics (Lectues 2-5)</a>
