--- a/GraduateSchoolCourses/TCS_Toolkit-Ryan_ODonell/AsymptoticsAndGaussians/index.html
+++ b/GraduateSchoolCourses/TCS_Toolkit-Ryan_ODonell/AsymptoticsAndGaussians/index.html
@@ -212,6 +212,7 @@ H(n) &amp;= \text{ Area of yellow rects} \\
 <p>This should be enough to show that <span class="math inline">\(H(n) \sim \ln n\)</span> but to be fully formal we derive this explicitly. To do so we need the Taylors series.</p>
 <h3 id="taylors-series">Taylors Series</h3>
 <p>A good taylors series recap can be found <a href="">here</a></p>
+<p><strong>TODO from Asymptotia: Some theorems about Taylors series</strong></p>
 <div class="important">
 <p>This approximation shows up in papers all the time.</p>
 <p>For small <span class="math inline">\(x\)</span>,</p>
@@ -228,8 +229,72 @@ H(n) &amp;= \text{ Area of yellow rects} \\
 <p>Asymptotics of <span class="math inline">\(\log_2(\frac{1}{1/2 - \epsilon})\)</span>: How does this function grow?</p>
 <p>From above analysis both <span class="math inline">\(1 +\ln n\)</span> and <span class="math inline">\(\ln (n+1)\)</span> are equivalent to <span class="math inline">\(\ln n\)</span> but which one grows more similart to it?</p>
 <h3 id="inverting-functions">Inverting Functions</h3>
-<h2 id="birthday-pardox-problem">Birthday Pardox Problem</h2>
-<p>This is a concerete example of how using asympotics helps us understand complicated functions and it will lead us to more tricks to bound factorials and binomial coefficients which show up in all kinds of counting problems.</p>
+<p>Consider a relation such as <span class="math inline">\(y = x \ln x\)</span> for <span class="math inline">\(x \geq 1\)</span>. This is an increasing function of <span class="math inline">\(x\)</span> and so there is a unique inverse function <span class="math inline">\(x = f(y)\)</span> for <span class="math inline">\(y \geq 0\)</span>. However, there is no compact way to write <span class="math inline">\(f(y)\)</span> precisely. However, if we were to consider only the asymptotic behaviour of these functions – this problem disappears.</p>
+<p>For very large <span class="math inline">\(x\)</span> and <span class="math inline">\(y\)</span>,</p>
+<span class="math display">\[\begin{align}
+\ln y &amp;= \ln(x) + \ln \ln(x)
+\end{align}\]</span>
+<p>As <span class="math inline">\(\ln \ln(x)\)</span> is grows really slowly, we can say</p>
+<span class="math display">\[\begin{align}
+x &amp;= \frac{y}{\ln(x)} 
+&amp;\sim \frac{y}{\ln(y)} 
+\end{align}\]</span>
+<p>Using this intuition, from Asymptotia by Spencer we state the following theorem:</p>
+<div class="theorem">
+<h4>
+Theorem:
+</h4>
+<p>If <span class="math inline">\(y=\Theta(x^a\ln^b x)\)</span>, then <span class="math inline">\(x=\Theta(y^{\frac{1}{a}} \ln^{\frac{-b}{a}}y)\)</span></p>
+</div>
+<h2 id="birthday-paradox-problem">Birthday Paradox Problem</h2>
+<p>This is a concrete example of how using asympotics helps us understand complicated functions and it will lead us to more tricks to bound factorials and binomial coefficients which show up in all kinds of counting problems.</p>
+<div class="important">
+<p><strong>FACT: </strong> If we have 23 people in a room, there is a 50% chance that 2 people with the same birthday.</p>
+</div>
+<h3 id="general-form">General form</h3>
+<p>In general, if we have <span class="math inline">\(m\)</span> bins and <span class="math inline">\(n\)</span> balls. We play a game by tossing the balls into the bins one after the other without replacement. We are interested in knowing for a fixed <span class="math inline">\(m\)</span> how does the probability of a collision grow with <span class="math inline">\(n\)</span>. Define <span class="math inline">\(p_{m,n}:=\)</span> as the probablity of seeing no collisions.</p>
+<span class="math display">\[\begin{align}
+p_{m,n} &amp;= 1(1-\frac{1}{m})(1-\frac{2}{m})\dots(1-\frac{n-11}{m}) \\
+&amp;\leq e^{-1/m}e^{-2/m}\dots e^{-n+1/m} \tag{a}\label{tBound} \\
+&amp;= exp\{-\frac{n(n-1)}{2m}\}\\
+&amp;= exp\{-\frac{n^2}{m}\}exp\{\frac{n}{m}\}\\
+&amp;\leq exp\{-\frac{n^2}{m}\}\Big( 1 + O(\frac{n}{m})\Big)\tag{b}\label{tBound2}
+\end{align}\]</span>
+<p><span class="math inline">\(\ref{tBound}: 1 - x \leq e^{-x}\)</span> <span class="math inline">\(\forall x \geq 0\)</span> using Taylors series for <span class="math inline">\(\ln( 1-x)\)</span></p>
+<p><span class="math inline">\(\ref{tBound2}: 1 + x \leq e^{x}\)</span> <span class="math inline">\(\forall x \geq 0\)</span></p>
+<div class="lemma">
+<h4>
+<strong>FACT:</strong>
+</h4>
+<p><span class="math inline">\(1 + x \geq exp\{x + Cx^2\}\)</span></p>
+</div>
+<p>Using the above fact we have</p>
+<span class="math display">\[\begin{align}
+p_{m,n} &amp;= 1(1-\frac{1}{m})(1-\frac{2}{m})\dots(1-\frac{n-11}{m}) \\
+&amp;\geq exp\{-\frac{1}{m} - C\frac{1}{m^2}\}exp\{-\frac{2^2}{m} - C\frac{2}{m^2}\}\dots exp\{-\frac{n-1}{m} - C\frac{(n-1)^2}{m^2}\} \\
+&amp;= exp\{-\frac{n(n-1)}{2m}\}exp\{-C\frac{O(n^3)}{m^2}\} \tag{a}\label{sSquares}\\
+&amp;= exp\{-\frac{n(n-1)}{2m}\}\Big( 1 - O(\frac{n^3}{m^2})\Big) \tag{b}\label{tBound3}\\
+&amp;\geq exp\{-\frac{n^2}{m}\}\Big( 1 + O(\frac{n}{m})\Big)\Big( 1 - O(\frac{n^3}{m^2})\Big)
+\end{align}\]</span>
+<p>Note: This lower bound is trivial if <span class="math inline">\(n^3\)</span> is greater than <span class="math inline">\(m^2\)</span>, making it a negative number. All probabilities are greater than negative numbers. <strong>So assume <span class="math inline">\(n^3 \leq m^3\)</span></strong></p>
+<p><span class="math inline">\(\ref{sSquares}:\)</span> Upper bounding sum of squares</p>
+<p><span class="math inline">\(\ref{tBound3}: 1 + x \leq e^{x}\)</span> <span class="math inline">\(\forall x \geq 0\)</span> and we are lower bounding so multiplying by a smaller number only decreases lower bound.</p>
+<p>Finally we have that</p>
+<span class="math display">\[\begin{align}
+exp\{-\frac{n^2}{m}\}\Big( 1 + O(\frac{n}{m})\Big)\Big( 1 - O(\frac{n^3}{m^2})\Big) &amp;\leq p_{m.n}\\
+&amp;\leq exp\{-\frac{n^2}{m}\}\Big( 1 + O(\frac{n}{m})\Big)
+\end{align}\]</span>
+<p>which means we can write the above results as</p>
+<span class="math display">\[\begin{align}
+ p_{m.n} &amp;= exp\{-\frac{n^2}{m}\}\Big( 1 + O(\frac{n}{m})\Big)\Big( 1 - O(\frac{n^3}{m^2})\Big)
+\end{align}\]</span>
+<p>We have two error terms : <span class="math inline">\(\Big( 1 + O(\frac{n}{m})\Big)\)</span> and <span class="math inline">\(\Big( 1 - O(\frac{n^3}{m^2})\Big)\)</span>. Both of them approach constants, so we can set $p_{m.n} exp{-} giving us</p>
+<span class="math display">\[\begin{align}
+ p_{m.n} &amp;\approx exp\{-\frac{n^2}{m}\}\\
+ n &amp;= \sqrt{m\ln (1/p_{m,m})}
+\end{align}\]</span>
+<p>Also note, magically at <span class="math inline">\(n=\sqrt{m}\)</span>, we have <span class="math inline">\(\frac{n^3}{m} = \frac{n}{m}\)</span> so both error terms contribute equally.</p>
+<p>A little numerical experiment to verify how tight this is bound is</p>
 <h1 id="factorials-and-binomial-coefficients-lec-3">Factorials and Binomial Coefficients (Lec 3)</h1>
 <p>At the end of this section, we will see how these tricks are directly used in a paper published in ICML 2020, on shuffle privacy.</p>
 <h1 id="central-limit-theorem-and-gaussian-random-variables-lec-4">Central Limit Theorem and Gaussian Random Variables (Lec 4)</h1>
