--- a/conferences/index.html
+++ b/conferences/index.html
@@ -64,7 +64,8 @@
 <h2 id="differentially-private-multi-armed-bandits-in-the-shuffle-model"><a href="https://arxiv.org/pdf/2106.02900.pdf">Differentially Private Multi-Armed Bandits in the Shuffle Model</a></h2>
 </div>
 <div id="footer">
-  “Study hard what interests you the most in the most undisciplined, irreverent and original manner possible.”― Richard Feynmann
+  “Study hard what interests you the most in the most undisciplined,
+  irreverent and original manner possible.”― Richard Feynmann
 </div>
 </body>
 </html>
