--- a/index.html
+++ b/index.html
@@ -36,10 +36,14 @@
 <li><a href="./DifferentialPrivacyMain">Statistical Privacy Notes</a></li>
 <li><a href="./Crypto/">Secure Multiparty Computation/Crypto</a></li>
 <li><a href="./conferences/">Conference Notes</a></li>
-</ul>
+<li><a href="./GraduateSchoolCourses/">Course Notes</a>
 <div class=container>
+
+</li>
+</ul>
 <div id="footer">
-  “Study hard what interests you the most in the most undisciplined, irreverent and original manner possible.”― Richard Feynmann
+  “Study hard what interests you the most in the most undisciplined,
+  irreverent and original manner possible.”― Richard Feynmann
 </div>
 </body>
 </html>
