--- a/Crypto/SNIPs/index.html
+++ b/Crypto/SNIPs/index.html
@@ -23,7 +23,8 @@
   
   <ul class="bar">
     <li class="barli"><a class="active" href="/">Home</a></li>
-    <li class="barli"><a href="/differentialprivacy/index.html">Notes on Differential Privacy</a></li>  
+    <li class="barli"><a href="/differentialprivacy/index.html">My Notes</a></li>  
+    <li class="barli"><a href="./..">Back</a></li>  
     <!-- <li class="barli"><a href="https://abiswas3.github.io/differentialprivacy.github.io">Notes on Differential Privacy</a></li> -->
   </ul>
 </head>
