--- a/conferences/index.html
+++ b/conferences/index.html
@@ -15,6 +15,7 @@
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
   <![endif]-->
+  <!-- This one is used by general blogs on the root level -->
   <link rel="stylesheet" href="/code/bootstrap.min.css">
   <script src="/code/jquery.min.js"></script>
   <script src="/code/bootstrap.min.js"></script>
@@ -22,7 +23,8 @@
   
   <ul class="bar">
     <li class="barli"><a class="active" href="/">Home</a></li>
-    <li class="barli"><a href="/DifferentialPrivacyMain/index.html">Notes on Differential Privacy</a></li>  
+    <li class="barli"><a href="/DifferentialPrivacyMain/index.html">Notes</a></li>  
+    <li class="barli"><a href="./..">Back</a></li>    
     <!-- <li class="barli"><a href="https://abiswas3.github.io/differentialprivacy.github.io">Notes on Differential Privacy</a></li> -->
   </ul>
 </head>
