--- a/Crypto/SNIPs/index.html
+++ b/Crypto/SNIPs/index.html
@@ -34,7 +34,7 @@
 <h1 id="shared-non-interactive-proofs-snips">Shared Non Interactive Proofs (SNIPs)</h1>
 <p><strong>NOTE:</strong> In this document we use the terms voter, client and prover interchangeably. We also use the words verifier and servers interchangeably. All computation is done in <span class="math inline">\(\mathbb{Z}_p\)</span> where <span class="math inline">\(p\)</span> is large prime. Much larger than <span class="math inline">\(M\)</span>, the number of candidates in an election.</p>
 <h2 id="recap-of-voting-protocol">Recap of voting protocol</h2>
-<p>TODO.</p>
+<p>See slides I sent Graham.</p>
 <h2 id="what-is-a-proof-system">What is a proof system</h2>
 <p>According to Wikipedia a proof system is an abstract machine that models computation as the exchange of messages between two parties: a prover and a verifier. The parties interact by exchanging messages in order to ascertain whether a given string belongs to a language or not i.e. the prover has some string <span class="math inline">\(x\)</span> and the language can be described by all <span class="math inline">\(x\)</span> such that <span class="math inline">\(f(x) = 1\)</span></p>
 <p>In a non interactive system, there is just one round of interaction between the prover and the verifier. Traditionally proof systems have a single prover and a single verifier.</p>
