--- a/GraduateSchoolCourses/index.html
+++ b/GraduateSchoolCourses/index.html
@@ -30,10 +30,12 @@
 <body>
 
 <div class="container">
-<h1 id="course">Course</h1>
+<h1 id="coursework-that-i-can-remember">Coursework that I can remember</h1>
 <ul>
 <li><a href="./TCS_Toolkit-Ryan_ODonell/">Theoretical Computer Science Toolkit</a> - Taught By Ryan O Donnell <strong>IN PROGRESS</strong></li>
-<li>Introduction to Real Analaysis - Taught by Simon Marshall <strong>Need to transfer coursework from paper to digital</strong></li>
+<li><a href="../Crypto/Foundations/">Foundations of Cryptography</a> - Self Taught <strong>IN PROGRESS</strong></li>
+<li>Introduction to Real Analaysis - Taught by Simon Marshall <span class="citation" data-cites="Wisc">@Wisc</span><strong>Need to transfer coursework from paper to digital</strong></li>
+<li>Non Linear Optimisation - Taught by Stephen Wright <span class="citation" data-cites="Wisc">@Wisc</span> <strong>Need to transfer coursework from paper to digital</strong></li>
 <li>Boolean function analysis - Taught by Ryan O Donnell <strong>Not yet started</strong></li>
 </ul>
 <!-- * PCP by Tom Gur : TODO
