Private voting summary started

--- a/Crypto/index.html
+++ b/Crypto/index.html
@@ -42,6 +42,7 @@
 <ul>
 <li><a href="">General Proof System Notes</a>: TOOD</li>
 <li><a href="./SNIPs/">SNIPs</a></li>
+<li><a href="./Poplar/">Poplar</a></li>
 </ul>
 </div>
 <div id="footer">
