--- a/DifferentialPrivacyMain/index.html
+++ b/DifferentialPrivacyMain/index.html
@@ -131,6 +131,12 @@ Kim, Gopi, Kulkarni, Yekhanin
 </tr>
 </tbody>
 </table>
+<h2 id="my-work">My work</h2>
+<p>From meeting on <strong>INSERT</strong> there are two threads that have emerged.</p>
+<ol type="1">
+<li>End to End to secure voting with a malicicious adversary</li>
+<li>A circuit styled approach to DP.</li>
+</ol>
 <!-- ### Secure Comparison Protocols
 
 <style type="text/css">
