--- a/Crypto/Foundations/OneWayFunctions/index.html
+++ b/Crypto/Foundations/OneWayFunctions/index.html
@@ -105,7 +105,7 @@ of <span class="math inline">\(f(u)\)</span> is bad not just the one
 that was used to create <span class="math inline">\(f(u)\)</span>. The
 axillary input <span class="math inline">\(1^n\)</span> is given to tell
 the <span class="math inline">\(A^{&#39;}\)</span> the size of the
-output, in the case <span class="math inline">\(f\)</span> shrunk the
+input, in the case <span class="math inline">\(f\)</span> shrunk the
 input.</p>
 <p><strong>THERE are two more examples that I would like to understand
 more before moving on</strong></p>
@@ -124,7 +124,7 @@ class="math inline">\(A(x) = f (x)\)</span>).</li>
 <li><strong>Kinda Hard to invert:</strong> <u>There exists positive
 polynomial</u> <span class="math inline">\(p(·)\)</span> such that for
 every probabilistic polynomial-time algorithm <span
-class="math inline">\(A′\)</span>, and all sufficiently large <span
+class="math inline">\(A^′\)</span>, and all sufficiently large <span
 class="math inline">\(n\)</span>’s,</li>
 </ol>
 <p><span class="math display">\[P_{u\sim U^n, r \sim
