--- a/Crypto/Foundations/index.html
+++ b/Crypto/Foundations/index.html
@@ -38,12 +38,16 @@ cryptography or complexity theory, but in my old age I have decided to
 pursue research in related areas. This page and its children pages are
 my notes from studying different concepts in modern cryptography. They
 are designed to be consumed by me only and are likely full of typos.</p>
-<h2 id="table-of-contents">Table of Contents</h2>
+<h2 id="vol-i-notes">Vol I: Notes</h2>
 <ul>
 <li><a href="./Prelims/">Chapter I: Background</a></li>
 <li><a href="./OneWayFunctions/">Chapter II: One way functions</a>
 <!-- * [Chapter III: Pseduo Random generators](./PseudoRandomStuff/) --></li>
 <li><a href="./ZK_Proofs/">Chapter IV: Zero Knowledge Proofs</a></li>
+</ul>
+<h2 id="misc">Misc</h2>
+<ul>
+<li><a href="./RealVsIdeal/">Security Defintions</a></li>
 </ul>
 </section>
 <div id="footer">
