--- a/DifferentialPrivacyMain/index.html
+++ b/DifferentialPrivacyMain/index.html
@@ -35,6 +35,10 @@
 
 <div class="container">
 
+<h2 id="seminal">Seminal</h2>
+<ul>
+<li><a href="https://arxiv.org/pdf/1311.0776.pdf">Composition Theorem</a></li>
+</ul>
 <h2 id="background">Background</h2>
 <ul>
 <li><a href="Definitions/">Differential Privacy Cheat sheet</a>: I define central differential privacy, local differential privacy and shuffle privacy. Introduce well the laplace mechanism - what it is and why it works. Simulation code to understand <span class="math inline">\((\alpha, \beta)\)</span> accuracy guarantees for the laplace mehanism is provided.</li>
