--- a/Crypto/TrustModels/index.html
+++ b/Crypto/TrustModels/index.html
@@ -183,7 +183,7 @@ correctness.</li>
 <tr class="even">
 <td>Our Work</td>
 <td>N</td>
-<td><span class="math inline">\(O(q)\)</span> + 1 com</td>
+<td><span class="math inline">\(O(q)\)</span></td>
 <td>N 1 bit leakage, but detectable (covert)</td>
 <td>Y</td>
 </tr>
