Trying this business

--- a/DifferentialPrivacyMain/header.html
+++ b/DifferentialPrivacyMain/header.html
@@ -1,7 +1,13 @@
 <link rel="stylesheet" href="/code/bootstrap.min.css">
 <script src="/code/jquery.min.js"></script>
 <script src="/code/bootstrap.min.js"></script>
-
+<script>
+window.MathJax = {
+  tex: {
+    tags: 'ams'
+  }
+};
+</script>
 
 <ul class="bar">
   <li class="barli"><a class="active" href="/">Home</a></li>
