--- a/public/404.html
+++ b/public/404.html
@@ -169,6 +169,18 @@ div.csl-indent {
 <li class="chapter" data-level="5.3" data-path="simulation.html"><a href="simulation.html#covert-ot"><i class="fa fa-check"></i><b>5.3</b> Covert OT</a></li>
 </ul></li>
 <li class="chapter" data-level="6" data-path="shuffle-privacy.html"><a href="shuffle-privacy.html"><i class="fa fa-check"></i><b>6</b> Shuffle Privacy</a></li>
+<li class="chapter" data-level="7" data-path="the-hybrid-argument.html"><a href="the-hybrid-argument.html"><i class="fa fa-check"></i><b>7</b> The Hybrid Argument</a></li>
+<li class="chapter" data-level="8" data-path="solutions-foundations-of-cryptography-preliminaries.html"><a href="solutions-foundations-of-cryptography-preliminaries.html"><i class="fa fa-check"></i><b>8</b> (Solutions) Foundations of Cryptography: Preliminaries</a>
+<ul>
+<li class="chapter" data-level="8.1" data-path="solutions-foundations-of-cryptography-preliminaries.html"><a href="solutions-foundations-of-cryptography-preliminaries.html#problem-1"><i class="fa fa-check"></i><b>8.1</b> Problem 1</a></li>
+<li class="chapter" data-level="8.2" data-path="solutions-foundations-of-cryptography-preliminaries.html"><a href="solutions-foundations-of-cryptography-preliminaries.html#problem-2"><i class="fa fa-check"></i><b>8.2</b> Problem 2</a></li>
+<li class="chapter" data-level="8.3" data-path="solutions-foundations-of-cryptography-preliminaries.html"><a href="solutions-foundations-of-cryptography-preliminaries.html#problem-3"><i class="fa fa-check"></i><b>8.3</b> Problem 3</a></li>
+<li class="chapter" data-level="8.4" data-path="solutions-foundations-of-cryptography-preliminaries.html"><a href="solutions-foundations-of-cryptography-preliminaries.html#problem-4"><i class="fa fa-check"></i><b>8.4</b> Problem 4</a></li>
+<li class="chapter" data-level="8.5" data-path="solutions-foundations-of-cryptography-preliminaries.html"><a href="solutions-foundations-of-cryptography-preliminaries.html#problem-5"><i class="fa fa-check"></i><b>8.5</b> Problem 5</a></li>
+<li class="chapter" data-level="8.6" data-path="solutions-foundations-of-cryptography-preliminaries.html"><a href="solutions-foundations-of-cryptography-preliminaries.html#problem-6"><i class="fa fa-check"></i><b>8.6</b> Problem 6</a></li>
+</ul></li>
+<li class="chapter" data-level="9" data-path="solutions-foundations-of-cryptography-one-way-functions.html"><a href="solutions-foundations-of-cryptography-one-way-functions.html"><i class="fa fa-check"></i><b>9</b> (Solutions) Foundations of Cryptography: One Way Functions</a></li>
+<li class="chapter" data-level="10" data-path="solutions-foundations-of-cryptography-pseudorandomness.html"><a href="solutions-foundations-of-cryptography-pseudorandomness.html"><i class="fa fa-check"></i><b>10</b> (Solutions) Foundations of Cryptography: Pseudorandomness</a></li>
 <li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>References</a></li>
 <li class="divider"></li>
 <li><a href="https://github.com/abiswas3/Humphrey/" target="blank">Meh</a></li>
