Need to prove security for semi-honest protocol

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Ari" />
 
 
-<meta name="date" content="2022-06-16" />
+<meta name="date" content="2022-06-19" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -162,11 +162,16 @@ div.csl-indent {
 <li class="chapter" data-level="2" data-path="intro.html"><a href="intro.html"><i class="fa fa-check"></i><b>2</b> Notes on DP</a></li>
 <li class="chapter" data-level="3" data-path="smooth-distributions.html"><a href="smooth-distributions.html"><i class="fa fa-check"></i><b>3</b> Smooth Distributions</a></li>
 <li class="chapter" data-level="4" data-path="beavers-triples.html"><a href="beavers-triples.html"><i class="fa fa-check"></i><b>4</b> Beavers Triples</a></li>
-<li class="chapter" data-level="5" data-path="simulation.html"><a href="simulation.html"><i class="fa fa-check"></i><b>5</b> Simulation</a>
+<li class="chapter" data-level="5" data-path="simulation-for-mpc.html"><a href="simulation-for-mpc.html"><i class="fa fa-check"></i><b>5</b> Simulation for MPC</a>
 <ul>
-<li class="chapter" data-level="5.1" data-path="simulation.html"><a href="simulation.html#semi-honest-ot"><i class="fa fa-check"></i><b>5.1</b> Semi-honest OT</a></li>
-<li class="chapter" data-level="5.2" data-path="simulation.html"><a href="simulation.html#malicious-ot"><i class="fa fa-check"></i><b>5.2</b> Malicious OT</a></li>
-<li class="chapter" data-level="5.3" data-path="simulation.html"><a href="simulation.html#covert-ot"><i class="fa fa-check"></i><b>5.3</b> Covert OT</a></li>
+<li class="chapter" data-level="5.1" data-path="simulation-for-mpc.html"><a href="simulation-for-mpc.html#bit-oblivious-transfer"><i class="fa fa-check"></i><b>5.1</b> Bit oblivious transfer</a></li>
+<li class="chapter" data-level="5.2" data-path="simulation-for-mpc.html"><a href="simulation-for-mpc.html#static-semi-honest-ppt-adversaries"><i class="fa fa-check"></i><b>5.2</b> Static Semi Honest PPT Adversaries</a>
+<ul>
+<li class="chapter" data-level="5.2.1" data-path="simulation-for-mpc.html"><a href="simulation-for-mpc.html#background"><i class="fa fa-check"></i><b>5.2.1</b> Background</a></li>
+<li class="chapter" data-level="5.2.2" data-path="simulation-for-mpc.html"><a href="simulation-for-mpc.html#protocol"><i class="fa fa-check"></i><b>5.2.2</b> Protocol</a></li>
+</ul></li>
+<li class="chapter" data-level="5.3" data-path="simulation-for-mpc.html"><a href="simulation-for-mpc.html#malicious-ot"><i class="fa fa-check"></i><b>5.3</b> Malicious OT</a></li>
+<li class="chapter" data-level="5.4" data-path="simulation-for-mpc.html"><a href="simulation-for-mpc.html#covert-ot"><i class="fa fa-check"></i><b>5.4</b> Covert OT</a></li>
 </ul></li>
 <li class="chapter" data-level="6" data-path="shuffle-privacy.html"><a href="shuffle-privacy.html"><i class="fa fa-check"></i><b>6</b> Shuffle Privacy</a></li>
 <li class="chapter" data-level="7" data-path="the-hybrid-argument.html"><a href="the-hybrid-argument.html"><i class="fa fa-check"></i><b>7</b> The Hybrid Argument</a></li>
@@ -180,7 +185,7 @@ div.csl-indent {
 <li class="chapter" data-level="8.6" data-path="solutions-foundations-of-cryptography-preliminaries.html"><a href="solutions-foundations-of-cryptography-preliminaries.html#problem-6"><i class="fa fa-check"></i><b>8.6</b> Problem 6</a></li>
 </ul></li>
 <li class="chapter" data-level="9" data-path="solutions-foundations-of-cryptography-one-way-functions.html"><a href="solutions-foundations-of-cryptography-one-way-functions.html"><i class="fa fa-check"></i><b>9</b> (Solutions) Foundations of Cryptography: One Way Functions</a></li>
-<li class="chapter" data-level="10" data-path="solutions-foundations-of-cryptography-pseudorandomness.html"><a href="solutions-foundations-of-cryptography-pseudorandomness.html"><i class="fa fa-check"></i><b>10</b> (Solutions) Foundations of Cryptography: Pseudorandomness</a></li>
+<li class="chapter" data-level="10" data-path="solutions-foundations-of-cryptography-pseudo-randomness.html"><a href="solutions-foundations-of-cryptography-pseudo-randomness.html"><i class="fa fa-check"></i><b>10</b> (Solutions) Foundations of Cryptography: Pseudo randomness</a></li>
 <li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>References</a></li>
 <li class="divider"></li>
 <li><a href="https://github.com/abiswas3/Humphrey/" target="blank">Meh</a></li>
@@ -205,7 +210,7 @@ div.csl-indent {
 <div id="header">
 <h1 class="title">My Notes</h1>
 <p class="author"><em>Ari</em></p>
-<p class="date"><em>2022-06-16</em></p>
+<p class="date"><em>2022-06-19</em></p>
 </div>
 <div id="my-notes" class="section level1 hasAnchor" number="1">
 <h1><span class="header-section-number"> 1</span> My notes<a href="index.html#my-notes" class="anchor-section" aria-label="Anchor link to header"></a></h1>
